<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.verification.fragments.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/top_text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_bold"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/user_icon"
                android:src="@drawable/icon_user"
                app:layout_constraintStart_toEndOf="@id/top_text_login"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_text_login" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project"
            android:textSize="46sp"
            android:textColor="@color/black"
            android:fontFamily="@font/outfit_semibold"
            android:layout_marginBottom="500dp"
            app:layout_constraintTop_toBottomOf="@id/top_case"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/management"
            android:textSize="46sp"
            android:textColor="@color/black"
            android:fontFamily="@font/outfit_semibold"
            android:layout_marginTop="-20dp"
            app:layout_constraintTop_toBottomOf="@id/title_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/input_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/title_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/outfit_regular"
            android:layout_margin="5dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_nofill"
                android:hint="@string/example_gmail_com"
                android:fontFamily="@font/outfit_regular"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/outfit_regular"
                android:layout_margin="5dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_nofill"
                android:hint="@string/my_secret_password"
                android:fontFamily="@font/outfit_regular"
                android:paddingHorizontal="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/input_case"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_login"
                    android:layout_width="340dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_fill"
                    android:text="@string/confirm"
                    android:fontFamily="@font/outfit_semibold"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account_yet"
                    android:fontFamily="@font/outfit_regular"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make_one_now"
                    android:textColor="@color/black"
                    android:fontFamily="@font/outfit_bold"
                    android:layout_marginHorizontal="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>